--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -3393,7 +3393,7 @@
  	 	 	"eng": "CyberSanta"
  	 	},
  	 	"donation13": {
- 	 	 	"trans": "賽博冰寒",
+ 	 	 	"trans": "賽博冰霜",
  	 	 	"eng": "CyberFrost"
  	 	},
  	 	"moderator": {
@@ -3833,7 +3833,7 @@
  	 	 	 	 	"eng": "Christmas chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "聖誕框架個人檔案外框（內建動畫）",
+ 	 	 	 	 	"trans": "聖誕個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Christmas Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -6728,7 +6728,7 @@
  	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop ${itemName}, you can use this to craft ${craftItem} or open it directly!"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "在假期期間，將有兩次限量版的聊天框架和標誌！",
+ 	 	 	"trans": "在假期期間，將有兩個期間限定的聊天外框和徽章！",
  	 	 	"eng": "During the holiday season, two time limited chat frame and emblem will be available!"
  	 	}
  	},
