--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -930,7 +930,7 @@
  	 	 	 	 	"eng": "Send Gift"
  	 	 	 	},
  	 	 	 	"sendCosmetic": {
- 	 	 	 	 	"trans": "化粧品の贈り物を送ってください",
+ 	 	 	 	 	"trans": "チャットフレームをプレゼントする",
  	 	 	 	 	"eng": "Send Cosmetic Gift"
  	 	 	 	},
  	 	 	 	"inviteToGang": {
@@ -1333,18 +1333,18 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${itemName}を選択しますか？",
+ 	 	 	 	 	"trans": "${itemName}でよろしいですか？",
  	 	 	 	 	"eng": "Select ${itemName}?"
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${itemName}を選択しますか？",
+ 	 	 	 	 	"trans": "${itemName}でよろしいですか？",
  	 	 	 	 	"eng": "Are you sure you want to select ${itemName}?"
  	 	 	 	},
  	 	 	 	"confirmText": {
- 	 	 	 	 	"trans": "確信してます",
+ 	 	 	 	 	"trans": "はい",
  	 	 	 	 	"eng": "I am sure"
  	 	 	 	}
  	 	 	}
@@ -1702,7 +1702,7 @@
  	 	 	 	},
  	 	 	 	"buyConfirm": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "エンブレムを購入しますか？",
+ 	 	 	 	 	 	"trans": "このエンブレムを購入しますか？",
  	 	 	 	 	 	"eng": "Purchase Emblem?"
  	 	 	 	 	}
  	 	 	 	},
@@ -1722,7 +1722,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"date"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${date}で期限切れになります",
+ 	 	 	 	 	"trans": "あと${date}",
  	 	 	 	 	"eng": "Expires at ${date}"
  	 	 	 	}
  	 	 	}
@@ -2279,7 +2279,7 @@
  	 	 	 	 	"eng": "Receive up to 2% (0.5% per Legendary Container) additional chance to get epic tier cache when unlocking Locked Legendary Container by activating ${itemName}"
  	 	 	 	},
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "今すぐ増えます",
+ 	 	 	 	 	"trans": "起動する",
  	 	 	 	 	"eng": "Increase now"
  	 	 	 	}
  	 	 	},
@@ -2311,15 +2311,15 @@
  	 	 	 	"vars": [
  	 	 	 	 	"current"
  	 	 	 	],
- 	 	 	 	"trans": "exp fuff（現在${current}％）",
+ 	 	 	 	"trans": "EXPブースト（現在${current}％）",
  	 	 	 	"eng": "EXP Buff (Currently ${current}%)"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "20分間、Exp Gainを80％増加させる",
+ 	 	 	 	"trans": "20分間, あらゆる獲得経験値が80％増加する",
  	 	 	 	"eng": "Increase your EXP gain by 80% for 20 minutes"
  	 	 	},
  	 	 	"button": {
- 	 	 	 	"trans": "活性化",
+ 	 	 	 	"trans": "発動する",
  	 	 	 	"eng": "Activate"
  	 	 	}
  	 	}
@@ -3071,11 +3071,11 @@
  	},
  	"slider": {
  	 	"min": {
- 	 	 	"trans": "分",
+ 	 	 	"trans": "最小",
  	 	 	"eng": "Min"
  	 	},
  	 	"max": {
- 	 	 	"trans": "マックス",
+ 	 	 	"trans": "最大",
  	 	 	"eng": "max"
  	 	}
  	},
@@ -3114,18 +3114,18 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "ブーストが発動中. 今から行うタスクにブーストを適用するには, チェックボックスにチェックをつけてください.",
+ 	 	 	 	"trans": "報酬ブーストが起動中. チェックをつけることで, 今から開始するタスクに適用される.",
  	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
  	 	 	},
  	 	 	"notActivatedDescription": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "獲得アイテムとexpが2倍に！ ただし, 所要時間と消費するアイテムは4倍になってしまいます",
+ 	 	 	 	"trans": "獲得アイテムとexpが2倍！ ただし, 所要時間と消費するアイテムは4倍になる",
  	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
  	 	 	},
  	 	 	"activate": {
- 	 	 	 	"trans": "今すぐブーストを起動する",
+ 	 	 	 	"trans": "起動する",
  	 	 	 	"eng": "Boost now"
  	 	 	},
  	 	 	"enableBoost": {
@@ -3135,7 +3135,7 @@
  	 	},
  	 	"startButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "始める",
+ 	 	 	 	"trans": "開始",
  	 	 	 	"eng": "start"
  	 	 	}
  	 	}
@@ -3349,7 +3349,7 @@
  	 	 	"eng": "Member"
  	 	},
  	 	"donation2": {
- 	 	 	"trans": "寄付者",
+ 	 	 	"trans": "支援者",
  	 	 	"eng": "Donator"
  	 	},
  	 	"donation3": {
@@ -3357,7 +3357,7 @@
  	 	 	"eng": "Elite"
  	 	},
  	 	"donation4": {
- 	 	 	"trans": "伝説の",
+ 	 	 	"trans": "伝説",
  	 	 	"eng": "Legendary"
  	 	},
  	 	"donation5": {
@@ -3365,7 +3365,7 @@
  	 	 	"eng": "Cybernetic Potato"
  	 	},
  	 	"donation6": {
- 	 	 	"trans": "尊敬",
+ 	 	 	"trans": "名声",
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation7": {
@@ -3409,11 +3409,11 @@
  	 	"donation1": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「MEMBER」称号",
+ 	 	 	 	 	"trans": "称号「メンバー」",
  	 	 	 	 	"eng": "\"Member\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "プロフィール画像のカスタマイズ機能が開放されます",
+ 	 	 	 	 	"trans": "プロフィール画像のカスタマイズ機能開放",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3425,7 +3425,7 @@
  	 	"donation2": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「DONATOR」称号",
+ 	 	 	 	 	"trans": "称号「支援者」",
  	 	 	 	 	"eng": "\"Donator\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3445,7 +3445,7 @@
  	 	"donation3": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「ELITE」称号",
+ 	 	 	 	 	"trans": "称号「エリート」",
  	 	 	 	 	"eng": "\"Elite\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3485,7 +3485,7 @@
  	 	"donation4": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「LEGENDARY」称号",
+ 	 	 	 	 	"trans": "称号「伝説」",
  	 	 	 	 	"eng": "\"Legendary\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3529,7 +3529,7 @@
  	 	 	 	 	"eng": "Cybernetic Potato"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "「CYBERNETIC POTATO」称号",
+ 	 	 	 	 	"trans": "称号「サイバネティック・ポテト」",
  	 	 	 	 	"eng": "\"Cybernetic Potato\" donation title"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3581,7 +3581,7 @@
  	 	"donation6": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「プレステージ」称号",
+ 	 	 	 	 	"trans": "称号「名声」",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3621,7 +3621,7 @@
  	 	"donation7": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「Prestige」称号",
+ 	 	 	 	 	"trans": "称号「名声」",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3661,7 +3661,7 @@
  	 	"donation8": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「Prestige」称号",
+ 	 	 	 	 	"trans": "称号「名声」",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3701,7 +3701,7 @@
  	 	"donation9": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「Prestige」称号",
+ 	 	 	 	 	"trans": "称号「名声」",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3741,7 +3741,7 @@
  	 	"donation10": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「Prestige」称号",
+ 	 	 	 	 	"trans": "称号「名声」",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3781,11 +3781,11 @@
  	 	"donation11": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「Cyberkitty」寄付タイトル",
+ 	 	 	 	 	"trans": "称号「サイバーニャンコ」",
  	 	 	 	 	"eng": "\"CyberKitty\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "プロフィール写真のカスタマイズを解除します",
+ 	 	 	 	 	"trans": "プロフィール画像のカスタマイズ機能開放",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3805,7 +3805,7 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "ギャングモットー設定可能",
+ 	 	 	 	 	"trans": "ギャングモットーの設定が可能",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
@@ -3821,11 +3821,11 @@
  	 	"donation12": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「サイバーサンタ」寄付タイトル",
+ 	 	 	 	 	"trans": "称号「サイバーサンタ」",
  	 	 	 	 	"eng": "\"CyberSanta\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "プロフィール写真のカスタマイズを解除します",
+ 	 	 	 	 	"trans": "プロフィール画像のカスタマイズ機能開放",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3833,27 +3833,27 @@
  	 	 	 	 	"eng": "Christmas chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "クリスマスフレームプロフィール（アニメーション付き）",
+ 	 	 	 	 	"trans": "クリスマスプロフィールフレーム（アニメーション付き）",
  	 	 	 	 	"eng": "Christmas Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "カスタムバイオのロックを解除します",
+ 	 	 	 	 	"trans": "自己紹介欄のカスタマイズ機能開放",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "プロフィール上のバーコード装飾",
+ 	 	 	 	 	"trans": "プロフィール画面にバーコードを付与",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "ギャングモットーをカスタマイズします",
+ 	 	 	 	 	"trans": "ギャングモットーの設定が可能",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "ギャングの画像をカスタマイズします",
+ 	 	 	 	 	"trans": "ギャングに画像を設定可能",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "将来の更新の詳細",
+ 	 	 	 	 	"trans": "今後のアップデートで更なる要素を追加予定",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3865,7 +3865,7 @@
  	 	 	 	 	"eng": "\"CyberFrost\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "プロフィール写真のカスタマイズを解除します",
+ 	 	 	 	 	"trans": "プロフィール画像を設定可能",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3873,27 +3873,27 @@
  	 	 	 	 	"eng": "Winter chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "冬のフレームプロフィール（アニメーション付き）",
+ 	 	 	 	 	"trans": "冬のプロフィールフレーム（アニメーション付き）",
  	 	 	 	 	"eng": "Winter Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "カスタムバイオのロックを解除します",
+ 	 	 	 	 	"trans": "自己紹介欄のカスタマイズ機能開放",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "プロフィール上のバーコード装飾",
+ 	 	 	 	 	"trans": "プロフィール画面にバーコードを付与",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "ギャングモットーをカスタマイズします",
+ 	 	 	 	 	"trans": "ギャングモットーを設定可能",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "ギャングの画像をカスタマイズします",
+ 	 	 	 	 	"trans": "ギャングに画像を設定可能",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "将来の更新の詳細",
+ 	 	 	 	 	"trans": "今後のアップデートで更なる要素を追加予定",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3992,7 +3992,7 @@
  	 	 	 	"eng": "Energy Cell"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "持ち運び可能な蓄電装置で, スペシャルウェポンの弾薬として使用できる.",
+ 	 	 	 	"trans": "持ち運び可能な蓄電装置. スペシャルウェポンの弾薬として使用できる.",
  	 	 	 	"eng": "Portable energy storage device, it can be used as consumable ammo for your Special Weapons"
  	 	 	}
  	 	},
@@ -4761,7 +4761,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "${typeName}キャッシュには, 分子合成式3Dプリントに必要な情報が含まれています. \r\n                     [セントラルハブ]の[分子合成式3Dプリンタ]で${typeName}を作成できます. \r\n                    \r\n                     PRO TIP：プリンタから得られる装備のレベルは, プリントスキルのレベルに依存します. \r\n                     [ゴミみたいな]ものから先にプリントしていこう. コストをかけずにクラフトスキルを上げることができる/",
+ 	 	 	 	"trans": "${typeName}キャッシュには, 分子合成式3Dプリントに必要な情報が含まれている. \r\n                     [セントラルハブ]の[分子合成式3Dプリンタ]で${typeName}を作成できます. \r\n                    \r\n                     PRO TIP：プリンタから得られる装備のレベルは, プリントスキルのレベルに依存します. \r\n                     [ゴミみたいな]ものから先にプリントしていこう. コストをかけずにクラフトスキルを上げることができる/",
  	 	 	 	"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
  	 	 	}
  	 	}
@@ -5726,19 +5726,19 @@
  	 	},
  	 	"unlockLootBox2": {
  	 	 	"name": {
- 	 	 	 	"trans": "珍しいコンテナを開ける",
+ 	 	 	 	"trans": "珍しいコンテナをアンロックする",
  	 	 	 	"eng": "Unlock Rare Container"
  	 	 	}
  	 	},
  	 	"unlockLootBox3": {
  	 	 	"name": {
- 	 	 	 	"trans": "伝説のコンテナを開ける",
+ 	 	 	 	"trans": "伝説のコンテナをアンロックする",
  	 	 	 	"eng": "Unlock Legendary Container"
  	 	 	}
  	 	},
  	 	"christmasGift": {
  	 	 	"name": {
- 	 	 	 	"trans": "神秘的なコンテナを開ける",
+ 	 	 	 	"trans": "神秘的なコンテナをアンロックする",
  	 	 	 	"eng": "Unlock Mysterious Container"
  	 	 	}
  	 	},
@@ -5784,13 +5784,13 @@
  	 	},
  	 	"halloween": {
  	 	 	"name": {
- 	 	 	 	"trans": "ジャックOランタン",
+ 	 	 	 	"trans": "ジャックオーランタン",
  	 	 	 	"eng": "Jack O Lantern"
  	 	 	}
  	 	},
  	 	"christmasToBox": {
  	 	 	"name": {
- 	 	 	 	"trans": "ロックされた伝説的なコンテナ",
+ 	 	 	 	"trans": "鍵のかかった伝説のコンテナ",
  	 	 	 	"eng": "Locked Legendary Container"
  	 	 	}
  	 	},
@@ -6377,7 +6377,7 @@
  	 	 	 	"eng": "Block"
  	 	 	},
  	 	 	"report": {
- 	 	 	 	"trans": "レポートとブロック",
+ 	 	 	 	"trans": "通報してブロック",
  	 	 	 	"eng": "Report and Block"
  	 	 	},
  	 	 	"openPlayerProfile": {
@@ -6722,11 +6722,11 @@
  	},
  	"christmasPromo": {
  	 	"title": {
- 	 	 	"trans": "幸せな冬の休日！",
+ 	 	 	"trans": "ハッピーホリデー！",
  	 	 	"eng": "Happy Winter Holiday!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "今年の最も素晴らしい時期です！ シャングリラでは、特別なイベントで冬の休日を祝っています！",
+ 	 	 	"trans": "今年も素敵な雪の季節がやってきました！ シャングリ・ラでは, クリスマスを祝う特別なイベントを開催中！",
  	 	 	"eng": "It's the most wonderful time of the year again! in Shang-ri-la we are celebrating the winter holiday with a special event!"
  	 	},
  	 	"desc2": {
@@ -6734,11 +6734,11 @@
  	 	 	 	"itemName",
  	 	 	 	"craftItem"
  	 	 	],
- 	 	 	"trans": "EnemiesとAI Core Auto Farmは${itemName}を落とす機会があります。これを使用して${craftItem}を作成したり、直接開いたりできます。",
+ 	 	 	"trans": "敵からのドロップアイテムや, AIコアを使った自動探索, ${itemName}が手に入る可能性があります. これを素材に使って${craftItem}をクラフトできるほか, そのままアンロックして中身をゲットすることも！",
  	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop ${itemName}, you can use this to craft ${craftItem} or open it directly!"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "ホリデーシーズン中に、2回限られたチャットフレームとエンブレムが利用可能になります！",
+ 	 	 	"trans": "ホリデーシーズン限定のチャットフレームとエンブレムが2種類登場！",
  	 	 	"eng": "During the holiday season, two time limited chat frame and emblem will be available!"
  	 	}
  	},
@@ -6752,11 +6752,11 @@
  	 	 	"eng": "Its the spooky time of the year again! Shang-ri-la is celebrating Halloween with a special event!"
  	 	},
  	 	"desc2": {
- 	 	 	"trans": "敵からのドロップアイテムや, AIコアによる自動探索で, ジャックランタンが手に入るかも！ これを素材に, 伝説的の鍵のかかったコンテナをクラフト可能！",
+ 	 	 	"trans": "敵からのドロップアイテムや, AIコアによる自動探索で, ジャックランタンが手に入るかも！ これを素材に, 鍵のかかった伝説のコンテナをクラフト可能！",
  	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "また, ハロウィンの間は限定寄付ティアが購入可能です！",
+ 	 	 	"trans": "ハロウィン期間中,限定の「サイバーバット」称号が購入可能！",
  	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
  	 	}
  	},
@@ -6869,22 +6869,22 @@
  	 	 	"eng": "scrap"
  	 	},
  	 	"destroy": {
- 	 	 	"trans": "破壊する",
+ 	 	 	"trans": "廃棄する",
  	 	 	"eng": "destroy"
  	 	}
  	},
  	"craftingStartPage": {
  	 	"instant": {
- 	 	 	"trans": "インスタント",
+ 	 	 	"trans": "即時完了",
  	 	 	"eng": "Instant"
  	 	},
  	 	"instantDescription": {
- 	 	 	"trans": "タスクは即座に完了します",
+ 	 	 	"trans": "タスクを即座に完了します",
  	 	 	"eng": "task will complete instantly"
  	 	},
  	 	"startButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "始める",
+ 	 	 	 	"trans": "開始",
  	 	 	 	"eng": "start"
  	 	 	}
  	 	}
@@ -6895,7 +6895,7 @@
  	 	 	"eng": "benefits"
  	 	},
  	 	"title": {
- 	 	 	"trans": "寄付層",
+ 	 	 	"trans": "支援ティア",
  	 	 	"eng": "Donation Tiers"
  	 	},
  	 	"monthlySubscription": {
@@ -6906,7 +6906,7 @@
  	 	 	"vars": [
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "${price}月額USD",
+ 	 	 	"trans": "月額${price}米ドル",
  	 	 	"eng": "${price} USD Per Month"
  	 	},
  	 	"TiersTitle": {
@@ -6917,14 +6917,14 @@
  	 	 	"vars": [
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "${price}単位",
+ 	 	 	"trans": "${price}UNIT",
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"unitPriceDiscountEndDate": {
  	 	 	"vars": [
  	 	 	 	"date"
  	 	 	],
- 	 	 	"trans": "割引は${date}で終わります",
+ 	 	 	"trans": "割引はあと${date}で終わります",
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
  	 	"endDate": {
@@ -6964,11 +6964,11 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "化粧品を${playerName}に送信する",
+ 	 	 	"trans": "サイバーウェアを${playerName}に送信する",
  	 	 	"eng": "Sending cosmetic to ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "貿易の一部として知らないプレイヤーに化粧品を送信しないでください。 この機能はあなたの友人への贈り物としてのみ使用する必要があります",
+ 	 	 	"trans": "サイバーウェアのギフト機能はあくまでプレゼント用です. アイテム・金銭等との取引の一環として使うことは禁止されています.",
  	 	 	"eng": "Do not send cosmetic to players you do not know or use it as part of a trade. this feature should only be used as a gift to your friend"
  	 	},
  	 	"confirmModal": {
@@ -6978,15 +6978,15 @@
  	 	 	 	 	"playerName",
  	 	 	 	 	"price"
  	 	 	 	],
- 	 	 	 	"trans": "${donationName}寄付チャットフレーム（コスト${price}ユニット）をプレーヤー \"${playerName}\"に送信しますか？",
+ 	 	 	 	"trans": "${donationName}（価格：${price}UNIT）を「${playerName}」に送信しますか？",
  	 	 	 	"eng": "Send ${donationName} donation chat frame (cost ${price} Unit) to player \"${playerName}\"?"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[確認]をクリックすることで、あなたはこの化粧品の贈り物を貿易の一環として送っておらず、純粋に返品が予想されない友人への純粋な贈り物であることに同意します。",
+ 	 	 	 	"trans": "[了承]をクリックすることで, このアイテムがプレゼントであり, 取引目的や見返りを求めて送るものではないことを了承したことになります",
  	 	 	 	"eng": "By clicking confirm, you agree that you are not sending this cosmetic gift as part of a trade and is purely a gift to your friend with no return expected."
  	 	 	},
  	 	 	"confirmText": {
- 	 	 	 	"trans": "確認",
+ 	 	 	 	"trans": "了承",
  	 	 	 	"eng": "Confirm"
  	 	 	}
  	 	},
@@ -6995,22 +6995,22 @@
  	 	 	 	"donationName",
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "あなたは${donationName}寄付チャットフレームをプレーヤー \"${playerName}\"に正常に送信しました",
+ 	 	 	"trans": "${donationName} は「${playerName}」に正常に付与されました",
  	 	 	"eng": "You have successfully sent ${donationName} donation chat frame to player \"${playerName}\""
  	 	},
  	 	"hasDonation": {
- 	 	 	"trans": "所有",
+ 	 	 	"trans": "所有済",
  	 	 	"eng": "owned"
  	 	},
  	 	"donationPrice": {
  	 	 	"vars": [
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "${price}ユニット",
+ 	 	 	"trans": "${price}UNIT",
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"donationDescription": {
- 	 	 	"trans": "才能のある寄付層は30日間続きます",
+ 	 	 	"trans": "付与された「支援者」ティアの期限は30日です",
  	 	 	"eng": "Gifted donation tier last for 30 days"
  	 	},
  	 	"emblemNotIncluded": {
@@ -7023,11 +7023,11 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "化粧品を${playerName}に送信する",
+ 	 	 	"trans": "サイバーウェアを${playerName}に送る",
  	 	 	"eng": "Sending cosmetic to ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "貿易の一部として知らないプレイヤーに化粧品を送信しないでください。 この機能はあなたの友人への贈り物としてのみ使用する必要があります",
+ 	 	 	"trans": "サイバーウェアのギフト機能はあくまでプレゼント用です. アイテム・金銭等との取引の一環として使うことは禁止されています.",
  	 	 	"eng": "Do not send cosmetic to players you do not know or use it as part of a trade. this feature should only be used as a gift to your friend"
  	 	},
  	 	"confirmModal": {
@@ -7036,15 +7036,15 @@
  	 	 	 	 	"playerName",
  	 	 	 	 	"price"
  	 	 	 	],
- 	 	 	 	"trans": "エンブレム（コスト${price}ユニット）をプレーヤー \"${playerName}\"に送信しますか？",
+ 	 	 	 	"trans": "このエンブレム（価格：${price}UNIT）を「${playerName}」に送りますか？",
  	 	 	 	"eng": "Send emblem (cost ${price} Unit) to player \"${playerName}\"?"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[確認]をクリックすることで、あなたはこの化粧品の贈り物を貿易の一環として送っておらず、純粋に返品が予想されない友人への純粋な贈り物であることに同意します。",
+ 	 	 	 	"trans": "[了承]をクリックすることで, このアイテムがプレゼントであり, 取引目的や見返りを求めて送るものではないことを了承したことになります",
  	 	 	 	"eng": "By clicking confirm, you agree that you are not sending this cosmetic gift as part of a trade and is purely a gift to your friend with no return expected."
  	 	 	},
  	 	 	"confirmText": {
- 	 	 	 	"trans": "確認",
+ 	 	 	 	"trans": "了承",
  	 	 	 	"eng": "Confirm"
  	 	 	}
  	 	},
@@ -7052,7 +7052,7 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "エンブレムをプレーヤー「${playerName}」に正常に送信しました",
+ 	 	 	"trans": "エンブレムを「${playerName}」に正常に送信しました",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
  	 	}
  	}
