--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -6635,6 +6635,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Il tempo del tuo dispositivo non è corretto. Si prega di sincronizzare il dispositivo del dispositivo con la rete e assicurarsi che la zona temporale sia impostata correttamente",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6932,7 +6940,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Aggiunta limitata fino al ${date} (finisce tra ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Questo titolo non scadrà mai, \n rimarrà per sempre nel tuo account.",
