--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -6531,6 +6531,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "장치 시간이 잘못되었습니다. 장치 장치를 네트워크와 동기화하고 시간대가 올바르게 설정되어 있는지 확인하십시오",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6828,7 +6836,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "${date}까지만 구매할 수 있는 한정판! (${relative} 뒤에 종료됩니다.)",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "이 타이틀은 영구적입니다. 한 번 구입하면 당신의 계정에 영원히 적용됩니다.",
