--- a/contribution/lang/ro.json
+++ b/contribution/lang/ro.json
@@ -6422,6 +6422,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Timpul dispozitivului dvs. este incorect. Vă rugăm să sincronizați dispozitivul dispozitivului cu rețeaua și să vă asigurați că zona de timp este setată corect",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6719,7 +6727,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Adăugare limitată până la ${date} (se încheie în ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Acest titlu nu va expira niciodată. \\ Nit rămâne cu contul dvs. pentru totdeauna.",
