--- a/contribution/lang/tl.json
+++ b/contribution/lang/tl.json
@@ -6635,6 +6635,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Ang oras ng iyong aparato ay hindi tama. Mangyaring i-sync ang iyong aparato ng aparato gamit ang network at tiyakin na ang iyong time-zone ay nakatakda nang tama",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6932,7 +6940,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Limitadong karagdagan hanggang sa ${date} (magtatapos sa ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Ang pamagat na ito ay hindi kailanman mag -expire. \\ Nit mananatili sa iyong account magpakailanman.",
