--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -6422,6 +6422,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Cihaz süreniz yanlış. Lütfen cihazınızı ağla senkronize edin ve zaman diliminizin doğru ayarlandığından emin olun",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6719,7 +6727,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "${date} 'a kadar sınırlı ekleme (${relative} ile bitiş)",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Bu unvanın süresi asla dolmaz.\\nIt sonsuza kadar hesabınızda kalır.",
