--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -6422,6 +6422,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Thời gian thiết bị của bạn không chính xác. Vui lòng đồng bộ hóa thiết bị của bạn với mạng và đảm bảo vùng thời gian của bạn được đặt chính xác",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6719,7 +6727,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Bổ sung giới hạn cho đến ${date} (kết thúc trong ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Tiêu đề này sẽ không bao giờ hết hạn. \\ Unit ở lại với tài khoản của bạn mãi mãi.",
