--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -6422,6 +6422,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "وقت جهازك غير صحيح. يرجى مزامنة جهازك مع الشبكة والتأكد من تعيين منطقة الوقت الخاصة بك بشكل صحيح",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6719,7 +6727,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "إضافة محدودة حتى ${date} (نهاية ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "لن ينتهي هذا العنوان أبدا. \\ NIT يبقى مع حسابك إلى الأبد.",
