--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -6422,6 +6422,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Ihre Gerätezeit ist falsch. Bitte synchronisieren Sie Ihr Gerätegerät mit Netzwerk und stellen Sie sicher, dass Ihre Zeitzone korrekt eingestellt ist",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6719,7 +6727,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Begrenzte Zugabe bis ${date} (Ende in ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Dieser Titel läuft niemals aus.\n(Er bleibt dauerhaft auf deinem Konto)",
