--- a/contribution/lang/en.json
+++ b/contribution/lang/en.json
@@ -6635,6 +6635,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6932,7 +6940,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Limited addition till ${date} (end in ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "This title will never expire.\\nIt stays with your account forever.",
