--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -6422,6 +6422,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Le temps de votre appareil est incorrect. Veuillez synchroniser votre appareil avec réseau et assurer que votre rein du calendrier est réglé correctement",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6719,7 +6727,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Ajout limité jusqu'à ${date} (se terminer par ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Ce titre n'expirera jamais. \\nIl reste avec ton compte pour toujours.",
