--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -6422,6 +6422,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Waktu perangkat Anda salah. Harap sinkronkan perangkat perangkat Anda dengan jaringan dan pastikan zona waktu Anda diatur dengan benar",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6719,7 +6727,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Tambahan Terbatas hingga ${date} (berakhir pada ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Titel ini tidak akan pernah kedaluwarsa.\\nTitel ini berlaku pada akun Kamu selamanya.",
