--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -6636,6 +6636,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "デバイスの時間が正しくありません。 デバイスデバイスをネットワークと同期し、タイムゾーンが正しく設定されていることを確認してください",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6933,7 +6941,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "${date}までの限定ラインナップ（${relative}で終了）",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "このコンテンツは期限切れになることはありません.\r\n あなたのアカウントに永久に付与されます.",
