--- a/contribution/lang/nl.json
+++ b/contribution/lang/nl.json
@@ -6422,6 +6422,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Uw apparaattijd is onjuist. Synchroniseer uw apparaatapparaat met netwerk en zorg ervoor dat uw tijdzone correct is ingesteld",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6719,7 +6727,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Beperkte toevoeging tot ${date} (eindigen in ${relative}))",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Deze titel verlaat nooit. \\ Nit blijft voor altijd bij uw account.",
