--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -6635,6 +6635,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Čas vášho zariadenia je nesprávny. Synchronizujte svoje zariadenie so sieťou a uistite sa, že je váš časový zón nastavený správne",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6932,7 +6940,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Limited Pridanie do ${date} (koniec v ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Tento titul nikdy nevyprší.",
