--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -6422,6 +6422,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "เวลาอุปกรณ์ของคุณไม่ถูกต้อง โปรดซิงค์อุปกรณ์อุปกรณ์ของคุณกับเครือข่ายและตรวจสอบให้แน่ใจว่าโซนเวลาของคุณถูกตั้งค่าอย่างถูกต้อง",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6719,7 +6727,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "การเพิ่มจำนวนมากจนถึง ${date} (สิ้นสุดใน ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "ชื่อนี้จะไม่มีวันหมดอายุ \\ nit กับบัญชีของคุณตลอดไป",
