--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -6623,6 +6623,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "Час вашого пристрою неправильний. Будь ласка, синхронізуйте пристрій пристрою з мережею та переконайтеся, що ваша часова зона встановлена правильно",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6920,7 +6928,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "Обмежене додавання до ${date} (кінець ${relative})",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Це звання довічне. \n Воно залишається з вашим обліковим записом назавжди.",
