--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -6635,6 +6635,14 @@
  	 	 	}
  	 	}
  	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"trans": "您的设备时间不正确。 请将设备设备与网络同步，并确保正确设置您的时区",
+ 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	}
+ 	 	}
+ 	},
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
@@ -6932,7 +6940,7 @@
  	 	 	 	"relative"
  	 	 	],
  	 	 	"trans": "限量额外奖励提供至${date}（于${relative}结束）",
- 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "此头衔永远不会过期。\\ 它将永远留在您的帐户上。",
