--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -930,7 +930,7 @@
  	 	 	 	 	"eng": "Send Gift"
  	 	 	 	},
  	 	 	 	"sendCosmetic": {
- 	 	 	 	 	"trans": "チャットフレームをプレゼントする",
+ 	 	 	 	 	"trans": "サイバーウェアをプレゼントする",
  	 	 	 	 	"eng": "Send Cosmetic Gift"
  	 	 	 	},
  	 	 	 	"inviteToGang": {
