--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -340,7 +340,7 @@
 			"chatExploit": {
 				"title": {
 					"vars": ["vpnName"],
-					"trans": "聊天漏洞已被啟用，所有發送的消息將被更改。 使用${vpnName}可保護您的訊息",
+					"trans": "聊天漏洞已被啟動，所有發送的消息將被更改。 使用${vpnName}可保護您的訊息",
 					"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
 				},
 				"activateVPN": {
@@ -1354,7 +1354,7 @@
 				"eng": "Receive Global Buff Notification"
 			},
 			"forceMobileMode": {
-				"trans": "啟用 CyberPunk 模式",
+				"trans": "啟動 CyberPunk 模式",
 				"eng": "Enable Cyberpunk Mode"
 			},
 			"uiScale": {
@@ -1743,7 +1743,7 @@
 				"eng": "Paste or enter your coupon here"
 			},
 			"confirm": {
-				"trans": "啟用優惠碼",
+				"trans": "使用優惠碼",
 				"eng": "Activate Coupon"
 			}
 		},
@@ -2205,7 +2205,7 @@
 		"expBuff": {
 			"title": {
 				"vars": ["current"],
-				"trans": "Exp Buff（當前${current}％）",
+				"trans": "Exp Buff（目前${current}％）",
 				"eng": "EXP Buff (Currently ${current}%)"
 			},
 			"description": {
@@ -2213,7 +2213,7 @@
 				"eng": "Increase your EXP gain by 80% for 20 minutes"
 			},
 			"button": {
-				"trans": "啟用",
+				"trans": "啟動",
 				"eng": "Activate"
 			}
 		}
