--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -6867,7 +6867,7 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "화장품 보내기 ${playerName}",
+ 	 	 	"trans": "${playerName}에게 코스메틱 보내기",
  	 	 	"eng": "Sending cosmetic to ${playerName}"
  	 	},
  	 	"description": {
