--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -5469,7 +5469,7 @@
  	 	},
  	 	"reverseEngineer": {
  	 	 	"name": {
- 	 	 	 	"trans": "Ingegnerizzazione inversame degli scarti",
+ 	 	 	 	"trans": "Ingegnerizzazione inversa degli scarti",
  	 	 	 	"eng": "Reverse Engineer Scraps"
  	 	 	},
  	 	 	"description": {
