--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -4537,7 +4537,7 @@
  	 	 	 	 	"tierName",
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "Чертеж ${typeName} ${tierName}",
+ 	 	 	 	"trans": "[${tierName}] чертёж: ${typeName}",
  	 	 	 	"eng": "${tierName} ${typeName} cache"
  	 	 	},
  	 	 	"description": {
