remove capitalization so we can keep the translation

--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -13,7 +13,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Chat",
+ 	 	 	"trans": "chat",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
