added more translation

--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -2375,7 +2375,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "Jumlah",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Kapasitas Kalibrasi",
@@ -6019,6 +6019,15 @@
  	 	 	"trans": "Bitcoin tidak mencukupi",
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
+ 	 	"priceSelectModal": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Berapa harga Anda ingin menjual setiap ${itemName}?",
+ 	 	 	 	"eng": "How much would you like to sell each ${itemName} for?"
+ 	 	 	}
+ 	 	},
  	 	"priceConfirm": {
  	 	 	"vars": [
  	 	 	 	"amountStr",
@@ -6422,11 +6431,28 @@
  	 	 	}
  	 	}
  	},
+ 	"incorrectTimeModal": {
+ 	 	"title": {
+ 	 	 	"trans": "Waktu perangkat yang tidak akurat",
+ 	 	 	"eng": "Inaccurate Device Time"
+ 	 	},
+ 	 	"confirm": {
+ 	 	 	"trans": "Oke",
+ 	 	 	"eng": "Ok"
+ 	 	},
+ 	 	"cancel": {
+ 	 	 	"trans": "Bagaimana cara menyinkronkan waktu perangkat?",
+ 	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
  	"time": {
  	 	"error": {
  	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
  	 	 	 	"trans": "Waktu perangkat Anda salah. Harap sinkronkan perangkat perangkat Anda dengan jaringan dan pastikan zona waktu Anda diatur dengan benar",
- 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
  	},
@@ -6627,6 +6653,15 @@
  	 	"noItems": {
  	 	 	"trans": "Tidak ada item yang tersedia",
  	 	 	"eng": "No available items"
+ 	 	}
+ 	},
+ 	"sliderModal": {
+ 	 	"defaultAmountDisplay": {
+ 	 	 	"vars": [
+ 	 	 	 	"amount"
+ 	 	 	],
+ 	 	 	"trans": "Jumlah yang Dipilih: ${amount}",
+ 	 	 	"eng": "Selected amount: ${amount}"
  	 	}
  	},
  	"gang": {
