--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -2375,7 +2375,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "Cantidad",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Capacidad de Calibración",
@@ -6019,6 +6019,15 @@
  	 	 	"trans": "BTC insuficientes.",
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
+ 	 	"priceSelectModal": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "¿Por cuánto le gustaría vender cada ${itemName}?",
+ 	 	 	 	"eng": "How much would you like to sell each ${itemName} for?"
+ 	 	 	}
+ 	 	},
  	 	"priceConfirm": {
  	 	 	"vars": [
  	 	 	 	"amountStr",
@@ -6422,11 +6431,28 @@
  	 	 	}
  	 	}
  	},
+ 	"incorrectTimeModal": {
+ 	 	"title": {
+ 	 	 	"trans": "Tiempo de dispositivo inexacto",
+ 	 	 	"eng": "Inaccurate Device Time"
+ 	 	},
+ 	 	"confirm": {
+ 	 	 	"trans": "OK",
+ 	 	 	"eng": "Ok"
+ 	 	},
+ 	 	"cancel": {
+ 	 	 	"trans": "¿Cómo sincronizar el tiempo del dispositivo?",
+ 	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
  	"time": {
  	 	"error": {
  	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
  	 	 	 	"trans": "El tiempo de su dispositivo es incorrecto. Sincrita su dispositivo de dispositivo con la red y asegúrese de que su zona de tiempo esté configurada correctamente",
- 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
  	},
@@ -6627,6 +6653,15 @@
  	 	"noItems": {
  	 	 	"trans": "No hay artículos disponibles.",
  	 	 	"eng": "No available items"
+ 	 	}
+ 	},
+ 	"sliderModal": {
+ 	 	"defaultAmountDisplay": {
+ 	 	 	"vars": [
+ 	 	 	 	"amount"
+ 	 	 	],
+ 	 	 	"trans": "Cantidad seleccionada: ${amount}",
+ 	 	 	"eng": "Selected amount: ${amount}"
  	 	}
  	},
  	"gang": {
