--- a/contribution/lang/ro.json
+++ b/contribution/lang/ro.json
@@ -2375,7 +2375,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "Cantitate",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Capacitate de Calibrare",
@@ -6019,6 +6019,15 @@
  	 	 	"trans": "Bitcoin insuficient",
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
+ 	 	"priceSelectModal": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Cât ați dori să vindeți fiecare ${itemName} pentru?",
+ 	 	 	 	"eng": "How much would you like to sell each ${itemName} for?"
+ 	 	 	}
+ 	 	},
  	 	"priceConfirm": {
  	 	 	"vars": [
  	 	 	 	"amountStr",
@@ -6422,11 +6431,28 @@
  	 	 	}
  	 	}
  	},
+ 	"incorrectTimeModal": {
+ 	 	"title": {
+ 	 	 	"trans": "Timp inexact al dispozitivului",
+ 	 	 	"eng": "Inaccurate Device Time"
+ 	 	},
+ 	 	"confirm": {
+ 	 	 	"trans": "O.K",
+ 	 	 	"eng": "Ok"
+ 	 	},
+ 	 	"cancel": {
+ 	 	 	"trans": "Cum se sincronizează timpul dispozitivului?",
+ 	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
  	"time": {
  	 	"error": {
  	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
  	 	 	 	"trans": "Timpul dispozitivului dvs. este incorect. Vă rugăm să sincronizați dispozitivul dispozitivului cu rețeaua și să vă asigurați că zona de timp este setată corect",
- 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
  	},
@@ -6627,6 +6653,15 @@
  	 	"noItems": {
  	 	 	"trans": "Fără articole disponibile",
  	 	 	"eng": "No available items"
+ 	 	}
+ 	},
+ 	"sliderModal": {
+ 	 	"defaultAmountDisplay": {
+ 	 	 	"vars": [
+ 	 	 	 	"amount"
+ 	 	 	],
+ 	 	 	"trans": "Suma selectată: ${amount}",
+ 	 	 	"eng": "Selected amount: ${amount}"
  	 	}
  	},
  	"gang": {
