--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -2375,7 +2375,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "Кількість",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Рівень калібрування",
@@ -6220,6 +6220,15 @@
  	 	 	"trans": "Недостатньо біткойнів",
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
+ 	 	"priceSelectModal": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Скільки ви хотіли б продати кожен ${itemName}?",
+ 	 	 	 	"eng": "How much would you like to sell each ${itemName} for?"
+ 	 	 	}
+ 	 	},
  	 	"priceConfirm": {
  	 	 	"vars": [
  	 	 	 	"amountStr",
@@ -6623,11 +6632,28 @@
  	 	 	}
  	 	}
  	},
+ 	"incorrectTimeModal": {
+ 	 	"title": {
+ 	 	 	"trans": "Неточний час пристрою",
+ 	 	 	"eng": "Inaccurate Device Time"
+ 	 	},
+ 	 	"confirm": {
+ 	 	 	"trans": "В порядку",
+ 	 	 	"eng": "Ok"
+ 	 	},
+ 	 	"cancel": {
+ 	 	 	"trans": "Як синхронізувати час пристрою?",
+ 	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
  	"time": {
  	 	"error": {
  	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
  	 	 	 	"trans": "Час вашого пристрою неправильний. Будь ласка, синхронізуйте пристрій пристрою з мережею та переконайтеся, що ваша часова зона встановлена правильно",
- 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
  	},
@@ -6828,6 +6854,15 @@
  	 	"noItems": {
  	 	 	"trans": "Немає доступних предметів",
  	 	 	"eng": "No available items"
+ 	 	}
+ 	},
+ 	"sliderModal": {
+ 	 	"defaultAmountDisplay": {
+ 	 	 	"vars": [
+ 	 	 	 	"amount"
+ 	 	 	],
+ 	 	 	"trans": "Вибрана сума: ${amount}",
+ 	 	 	"eng": "Selected amount: ${amount}"
  	 	}
  	},
  	"gang": {
