--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -2375,7 +2375,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "Số lượng",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Số lõi nâng cấp",
@@ -6019,6 +6019,15 @@
  	 	 	"trans": "Không đủ Bitcoin",
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
+ 	 	"priceSelectModal": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Bạn muốn bán mỗi ${itemName} với giá bao nhiêu?",
+ 	 	 	 	"eng": "How much would you like to sell each ${itemName} for?"
+ 	 	 	}
+ 	 	},
  	 	"priceConfirm": {
  	 	 	"vars": [
  	 	 	 	"amountStr",
@@ -6422,11 +6431,28 @@
  	 	 	}
  	 	}
  	},
+ 	"incorrectTimeModal": {
+ 	 	"title": {
+ 	 	 	"trans": "Thời gian thiết bị không chính xác",
+ 	 	 	"eng": "Inaccurate Device Time"
+ 	 	},
+ 	 	"confirm": {
+ 	 	 	"trans": "Được",
+ 	 	 	"eng": "Ok"
+ 	 	},
+ 	 	"cancel": {
+ 	 	 	"trans": "Làm thế nào để đồng bộ hóa thời gian của thiết bị?",
+ 	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
  	"time": {
  	 	"error": {
  	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
  	 	 	 	"trans": "Thời gian thiết bị của bạn không chính xác. Vui lòng đồng bộ hóa thiết bị của bạn với mạng và đảm bảo vùng thời gian của bạn được đặt chính xác",
- 	 	 	 	"eng": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly"
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
  	},
@@ -6627,6 +6653,15 @@
  	 	"noItems": {
  	 	 	"trans": "Không có các mặt hàng có sẵn",
  	 	 	"eng": "No available items"
+ 	 	}
+ 	},
+ 	"sliderModal": {
+ 	 	"defaultAmountDisplay": {
+ 	 	 	"vars": [
+ 	 	 	 	"amount"
+ 	 	 	],
+ 	 	 	"trans": "Số tiền đã chọn: ${amount}",
+ 	 	 	"eng": "Selected amount: ${amount}"
  	 	}
  	},
  	"gang": {
